Fixes main page alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,8 +63,3 @@ body {
 .shepherd-target-marker{
   display: none;
 }
-
-.container{
-  margin-left: 0;
-  margin-right: 0;
-}
